--- a/roboverse_learn/fast_td3/configs/mjx.yaml
+++ b/roboverse_learn/fast_td3/configs/mjx.yaml
@@ -3,8 +3,8 @@
 # Environment
 # -------------------------------------------------------------------------------
 sim: mjx
-robots: [h1_hand_hb]
-task: humanoidbench:Push
+robots: [h1]
+task: humanoidbench:Stand
 decimation: 10
 train_or_eval: train
 
