--- a/roboverse_learn/fast_td3/configs/mjx.yaml
+++ b/roboverse_learn/fast_td3/configs/mjx.yaml
@@ -4,7 +4,7 @@
 # -------------------------------------------------------------------------------
 sim: mjx
 robots: [h1]
-task: humanoidbench:Stand
+task: humanoidbench:Maze
 decimation: 10
 train_or_eval: train
 
